tests/NormalTests/paczka1/fuzzy1/18988039.err
Error in line 4: jvE9SRGZ7 A378 74,6
Error in line 7: S580 S507 52,7
Error in line 6: ykTCSzFs S507 65,8
Error in line 16: jvE9SRGZ7 S566 45,0
Error in line 3: gaar5 S507 8,1
Error in line 14: CKmk S580 89,0
Error in line 33: ykTCSzFs S566 65,2
